--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,8 @@ body {
   padding: 15px 0;
 }
 .logo-container img {
-  height: 50px;
+  height: 88px;
+  width: auto;
 }
 .business-name {
   color: #333;
@@ -108,6 +109,7 @@ body {
   cursor: pointer;
   padding: 10px;
   z-index: 1000;
+  position: relative;
 }
 
 .mobile-menu-toggle .bar {
@@ -136,11 +138,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: right 0.5s ease;
+    transition: all 0.5s ease;
     z-index: 999;
     box-shadow: -5px 0 25px rgba(0, 195, 255, 0.2);
     opacity: 0;
     visibility: hidden;
+    display: flex;
   }
   
   .main-nav.active {
