--- a/css/styles.css
+++ b/css/styles.css
@@ -1457,7 +1457,8 @@ img[src*="3d_breakdown.png"] {
 
 .models-introduction h1,
 #enquiry h2,
-.innovative-income h2 {
+.innovative-income h2,
+.series-title {
   font-family: 'Orbitron', sans-serif;
   font-size: 2.8em;
   color: #000;
@@ -1468,7 +1469,8 @@ img[src*="3d_breakdown.png"] {
 
 .models-introduction h1:after,
 #enquiry h2:after,
-.innovative-income h2:after {
+.innovative-income h2:after,
+.series-title:after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -1643,4 +1645,22 @@ img[src*="3d_breakdown.png"] {
   margin-right: 10px;
   color: #00ff9d;
   font-weight: bold;
+}
+
+/* Add more spacing after models introduction */
+.models-introduction {
+  margin-bottom: 80px;  /* Increased spacing */
+  text-align: center;   /* Center the header */
+}
+
+/* Add spacing between series groups */
+.series-group {
+  margin-bottom: 60px;  /* Space between series */
+}
+
+/* Center series titles */
+.series-title {
+  text-align: center;
+  width: 100%;
+  margin-bottom: 40px;
 }
